--- a/index.html
+++ b/index.html
@@ -516,6 +516,27 @@
                             </div>
                         </div>
                     </div>
+                    <div class="card">
+                        <div class="row">
+                            <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50"
+                                data-aos-duration="500">
+                                <div class="card-body cc-experience-header">
+                                    <p>6-сар 2019 - 9-р сар 2019</p>
+                                    <div class="h5">Хөгжүүлэгч</div>
+                                </div>
+                            </div>
+                            <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                                <div class="card-body">
+                                    <div class="h5">Интерактив ХХК - Гэрээт ажилтан</div>
+                                    <p>-Veritech ERP платформ туршлага хуримтлуулсан
+                                        <br>-Oracle RDBMS
+                                        <br>-PHP хөгжүүлэлт
+                                        <br>-Javascript хөгжүүлэлт
+                                        <br>-JQuery</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="section">
