--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Personal Information</title>
     <meta name="description" content="Own Personal Information" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200"
       rel="stylesheet"
@@ -23,12 +24,7 @@
     <header>
       <div class="profile-page sidebar-collapse">
         <nav
-          class="
-            navbar navbar-expand-lg
-            fixed-top
-            navbar-transparent
-            bg-primary
-          "
+          class="navbar navbar-expand-lg fixed-top navbar-transparent bg-primary"
           color-on-scroll="400"
         >
           <div class="container">
@@ -101,7 +97,7 @@
                     Пүрэвсүрэн <strong>Болд-Эрдэнэ</strong>
                   </div>
                   <p class="category text-white">
-                    Web Developer, Mobile Developer
+                    Software Engineer, Web Developer, Mobile Developer
                   </p>
                   <a
                     class="btn btn-primary smooth-scroll mr-2"
@@ -109,10 +105,13 @@
                     data-aos="zoom-in"
                     data-aos-anchor="data-aos-anchor"
                     >Hire</a
-                  ><a
+                  >
+                  <!-- href="./pdf/BoldErdene-CV.pdf" -->
+                  <!-- target="_blank" -->
+                  <a
                     class="btn btn-primary"
-                    href="./pdf/BoldErdene-CV.pdf"
-                    target="_blank"
+                    href="#"
+                    onclick="alert('CV татах боломжгүй байна.')"
                     data-aos="zoom-in"
                     data-aos-anchor="data-aos-anchor"
                     >CV татах</a
@@ -124,7 +123,7 @@
                   <div class="button-container">
                     <a
                       class="btn btn-default btn-round btn-lg btn-icon"
-                      href="https://www.facebook.com/puujee.erdee/"
+                      href="https://www.facebook.com/pbolderdene/"
                       rel="tooltip"
                       title="Follow me on Facebook"
                       ><i class="fa fa-facebook"></i></a
@@ -148,7 +147,7 @@
                       ><i class="fa fa-instagram"></i></a
                     ><a
                       class="btn btn-default btn-round btn-lg btn-icon"
-                      href="https://www.linkedin.com/in/bolderdene-purevsuren-04316a188/"
+                      href="https://www.linkedin.com/in/bold-erdene-purevsuren-a77450194/"
                       rel="tooltip"
                       title="Follow me on Linked In"
                       ><i class="fa fa-linkedin"></i></a
@@ -165,7 +164,7 @@
             </div>
           </div>
         </div>
-        <div class="section" id="about">
+        <!-- <div class="section" id="about">
           <div class="container">
             <div class="card" data-aos="fade-up" data-aos-offset="10">
               <div class="row">
@@ -256,7 +255,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="section" id="skill">
           <div class="container">
             <div class="h4 text-center mb-4 title">Мэргэжлийн ур чадвар</div>
@@ -576,12 +575,15 @@
                         data-aos="fade-up"
                         data-aos-anchor-placement="top-bottom"
                       >
-                        <a href="#web-development">
+                        <a
+                          href="https://play.google.com/store/apps/details?id=mn.mongolbank.bombus"
+                          target="_blank"
+                        >
                           <figure class="cc-effect">
-                            <img src="images/project-2.jpg" alt="Image" />
+                            <img src="images/bombus1024.png" alt="Image" />
                             <figcaption>
-                              <div class="h4">Startup Project</div>
-                              <p>Web Development</p>
+                              <div class="h4">Recent Project</div>
+                              <p>Mobile Development</p>
                             </figcaption>
                           </figure>
                         </a>
@@ -1158,9 +1160,11 @@
                             <p class="mb-0"><strong>Хаяг </strong></p>
                             <p class="pb-2">БЗД 3-р хороо, Улаанбаатар</p>
                             <p class="mb-0"><strong>Утас</strong></p>
-                            <p class="pb-2">+976-9040-1221</p>
+                            <p>+976-9542-1221</p>
+                            <p>+976-9040-1221</p>
                             <p class="mb-0"><strong>Email</strong></p>
-                            <p>17b1num1654@stud.num.edu.mn</p>
+                            <p>bolderdene.p@outlook.com</p>
+                            <p>bolderdenep@protonmain.com</p>
                           </div>
                         </div>
                       </div>
