--- a/index.html
+++ b/index.html
@@ -5,7 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Personal Information</title>
-    <meta name="description" content="Own Personal Information" />
+    <meta name="description" content="Personal Information" />
+    <meta property="og:title" content="Personal Information" />
+    <meta
+      property="og:image"
+      content="https://bolderdene1221.github.io/resume/images/profile.jpg"
+    />
+    <meta
+      property="og:url"
+      content="https://bolderdene1221.github.io/resume/"
+    />
+    <meta property="og:site_name" content="Bolderdene Personal Information" />
+    <meta property="og:description" content="n00bmaster Personal Information" />
+    <meta name="twitter:title" content="Personal Information" />
+    <meta
+      name="twitter:image"
+      content="https://bolderdene1221.github.io/resume/images/profile.jpg"
+    />
+    <meta
+      name="twitter:url"
+      content="https://bolderdene1221.github.io/resume/"
+    />
+    <meta name="twitter:card" content="" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200"
